<resources>
    <string name="app_name">Pigeon Battle - Java Edition</string>

    <string name="beta_version_warning">WARNING! This is a pre-release version of the game! Some features may still be buggy and not fully implemented! Some things will change before the stable release!</string>

    <string name="attack">Attack</string>

    <string name="coins_amount">Coins: %d</string>
    <string name="score">Score: %d</string>
    <string name="play_button">Play</string>
    <string name="shop_button">Shop</string>
    <string name="pigeons_button">Pigeons</string>
    <string name="character_button">Character</string>
    <string name="settings_button">Settings</string>

    <string name="general_settings">General settings</string>
    <string name="experimental_features">Experimental features</string>
    <string name="info">Info</string>

    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="polish">Polish</string>

    <string name="changeAppLanguageInfo">It\'s recommended to restart the app after changing the app\'s language</string>

    <string name="spam_attacking">Attacking opponent by spamming the attack button</string>
    <string name="spam_attacking_consequences">After turning this feature on the game may lag and "*" will appear next to the money and score \nWARNING! This option will be removed soon!</string>
    <string name="spam_attacking_warning">Are you sure you want to turn this feature on?</string>

    <string name="cancel">Cancel</string>
    <string name="enable">Enable</string>

    <string name="author_name">Author name:</string>
    <string name="source_code">Source code:</string>
    <string name="original_project_author_name">Author name of the original project:</string>
    <string name="original_project_source_code">Source code of the original project: </string>
    <string name="info_button_close_button">Close</string>
    <string name="app_info">Author name: DeejvGames\nSource code: https://github.com/DeejvGames/PigeonBattleJavaEdition\nThis game uses some assets from: https://github.com/zntsproj/pigeonbattle</string>

    <string name="buy">Buy</string>
    <string name="bought">Bought</string>
    <string name="not_bought">Not bought</string>

    <string name="powerupsTitle">PowerUps</string>

    <string name="with">with</string>

    <string name="default_pigeon">Pigeon</string>
    <string name="default_pigeon_benefits">- Deals 50 damage per attack\n- Has 1200HP</string>

    <string name="select">Select</string>
    <string name="selected">Selected</string>
    <string name="unselect">Unselect</string>
    <string name="equip">Equip</string>
    <string name="unequip">Unequip</string>

    <string name="customize_character">Customize character</string>

    <string name="player">Player: %d HP</string>
    <string name="opponent">Opponent: %d HP</string>

    <string name="you_lost">You lost! Gained coins and score: %d</string>
    <string name="you_win">You win! Gained coins and score: %d</string>

    <string name="not_enough_coins">You have not enough coins!</string>
    <string name="successfully_bought">Successfully bought!</string>
    <string name="already_bought">You\'ve already bought it!</string>

    <string name="radio_pigeon">Radio Pigeon</string>
    <string name="radio_pigeon_benefits">- Deals 50 damage per attack\n- Deals 5 damage per second\n- Has 1250HP</string>
    <string name="radio_pigeon_price">Price: 150 Coins</string>

    <string name="pigeonin">Pigeonin</string>
    <string name="pigeonin2">Pigeonin</string>
    <string name="pigeonin_benefits">- Deals 10 more damage per attack\n- Adds 50HP every 5 seconds (Heals you)\n- Gives you 200 more HP</string>
    <string name="pigeonin_price">Price: 700 Coins</string>

    <string name="pigobomb">Pigobomb</string>
    <string name="pigobomb_benefits">- Deals 60 damage per attack\n- Has 1350HP</string>
    <string name="pigobomb_price">Price: 450 Coins</string>

    <string name="feathered_pigeon">Feathered Pigeon</string>
    <string name="feathered_pigeon_benefits">- Deals 55 damage per attack\n- Takes 15% less damage\n- Has 1600HP</string>
    <string name="feathered_pigeon_price">Price: 1000 Coins</string>

    <string name="milk_pigeon">Milk Pigeon</string>
    <string name="milk_pigeon_benefits">- Deals 70 damage per attack\n- Takes 10% less damage\n- Has 1250HP</string>
    <string name="milk_pigeon_price">Price: 600 Coins</string>

    <string name="wheel_pigeon">Wheel Pigeon</string>
    <string name="wheel_pigeon_benefits">- Deals 65 damage per attack\n- Is 25% faster\n- Has 1400HP</string>
    <string name="wheel_pigeon_price">Price: 800 Coins</string>

    <string name="nuclear_pigeon">Nuclear Pigeon</string>
    <string name="nuclear_pigeon_benefits">- Deals 90 damage per attack\n- Deals 10 damage per second\n- Has 1450HP</string>
    <string name="nuclear_pigeon_price">Price: 1200 Coins</string>

    <string name="hasHp">- Has %dHP</string>
    <string name="getsHp">- Gets %dHP every 5 seconds</string>
    <string name="dealsDamage">- Deals %d damage per attack</string>
    <string name="dealsDamagePerSecond">- Deals %d damage per second</string>
    <string name="takesLessDamage">- Takes %d less damage</string>
    <string name="isFaster">- Is %d faster</string>
</resources>