<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/viewTop"
                    android:layout_width="10dp"
                    android:layout_height="96dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/titleTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:fontFamily="@font/lexend_bold"
                    android:text="Pigeon Battle"
                    android:textAlignment="center"
                    android:textColor="@color/adaptive"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/coinsAmount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/viewTop" />

                <Button
                    android:id="@+id/playButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="#00aaff"
                    android:fontFamily="@font/lexend_regular"
                    android:onClick="openPlayActivity"
                    android:text="@string/play_button"
                    android:textColor="@color/black"
                    app:cornerRadius="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/score" />

                <Button
                    android:id="@+id/shopButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="#ffaa00"
                    android:fontFamily="@font/lexend_regular"
                    android:onClick="openShopActivity"
                    android:text="@string/shop_button"
                    android:textColor="@color/black"
                    app:cornerRadius="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/playButton" />

                <Button
                    android:id="@+id/characterButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="#aaaaaa"
                    android:fontFamily="@font/lexend_regular"
                    android:onClick="openCharacterActivity"
                    android:text="@string/character_button"
                    android:textColor="@color/black"
                    app:cornerRadius="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/shopButton" />

                <Button
                    android:id="@+id/infoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="#8BC34A"
                    android:fontFamily="@font/lexend_regular"
                    android:onClick="openSettingsActivity"
                    android:text="@string/settings_button"
                    android:textColor="@color/black"
                    app:cornerRadius="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/characterButton"
                    app:layout_constraintBottom_toTopOf="@id/viewBottom"/>

                <TextView
                    android:id="@+id/coinsAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/lexend_regular"
                    android:text="@string/coins_amount"
                    android:textAlignment="center"
                    android:textColor="@color/adaptive"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

                <TextView
                    android:id="@+id/score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/lexend_regular"
                    android:text="@string/score"
                    android:textAlignment="center"
                    android:textColor="@color/adaptive"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/coinsAmount" />

                <View
                    android:id="@+id/viewBottom"
                    android:layout_width="10dp"
                    android:layout_height="96dp"
                    app:layout_constraintTop_toBottomOf="@id/infoButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>